--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
             // 1. Ve a https://aistudio.google.com/app/apikey y obtén una API Key gratuita.
             // 2. Pégala abajo entre las comillas para que funcione fuera de este editor.
             // Ejemplo: const apiKey = "AIzaSy...";
-            const apiKey = ""; 
+            const apiKey = "AIzaSyDKMJ4drSL-4HNWlZsB0WA3dWcNERLcWt8"; 
 
             // Define Prompt based on language
             let systemPromptText = "";
