--- a/index.html
+++ b/index.html
@@ -79,9 +79,12 @@
             <div class="flex justify-between items-center h-16 md:h-20 gap-4 lg:gap-8">
                 <!-- Logo -->
                 <div class="flex-shrink-0 flex items-center">
-                    <a href="#" class="text-white font-heading font-bold text-xl tracking-wide flex flex-col sm:flex-row sm:items-center">
-                        <span>DR. HAN</span> 
-                        <span class="text-sky font-light sm:ml-2 text-xs sm:text-sm tracking-normal opacity-90 hidden lg:inline-block border-l border-gray-600 pl-2 ml-2">STRATEGIC HEALTH LEADER</span>
+                    <a href="#" class="text-white font-heading font-bold text-xl tracking-wide flex items-center">
+                        <img src="https://drive.google.com/thumbnail?id=1oqMOYFDdIc47CKLMa3xCSSvptH9aJyeC&sz=w200" alt="Logo Dr. Han" class="h-10 mr-3" referrerpolicy="no-referrer">
+                        <div class="flex flex-col sm:flex-row sm:items-center">
+                            <span>DR. HAN</span> 
+                            <span class="text-sky font-light sm:ml-2 text-xs sm:text-sm tracking-normal opacity-90 hidden lg:inline-block border-l border-gray-600 pl-2 ml-2">STRATEGIC HEALTH LEADER</span>
+                        </div>
                     </a>
                 </div>
                 
@@ -690,7 +693,7 @@
             // 1. Ve a https://aistudio.google.com/app/apikey y obtén una API Key gratuita.
             // 2. Pégala abajo entre las comillas para que funcione fuera de este editor.
             // Ejemplo: const apiKey = "AIzaSy...";
-            const apiKey = "AIzaSyDKMJ4drSL-4HNWlZsB0WA3dWcNERLcWt8"; 
+            const apiKey = ""; 
 
             // Define Prompt based on language
             let systemPromptText = "";
