--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                             <div class="w-8 h-8 rounded-full bg-teal flex items-center justify-center text-white font-bold text-xs">DH</div>
                             <div>
                                 <p class="text-xs font-bold text-white">Dr. Edgar Bañuelos</p>
-                                <p class="text-[9px] text-gray-400">Admin - EHS Manager</p>
+                                <p class="text-[9px] text-gray-400">Admin EHS</p>
                             </div>
                         </div>
                     </div>
