--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
 
                     <div class="mt-auto pt-6 border-t border-gray-700">
                         <div class="flex items-center space-x-3">
-                            <div class="w-8 h-8 rounded-full bg-teal flex items-center justify-center text-white font-bold text-xs">DH</div>
+                            <img src="https://drive.google.com/thumbnail?id=1VWqk33PEasus2aWjckWVViojvVw-cajS&sz=w200" alt="Dr. Han" class="w-8 h-8 rounded-full object-cover border border-teal" referrerpolicy="no-referrer">
                             <div>
                                 <p class="text-xs font-bold text-white">Dr. Edgar Bañuelos</p>
                                 <p class="text-[9px] text-gray-400">Admin EHS</p>
