--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 <div class="p-8 rounded-xl bg-slate border border-gray-100 hover:shadow-xl transition-shadow group">
                     <div class="w-14 h-14 bg-navy rounded-lg flex items-center justify-center mb-6 group-hover:bg-sky transition-colors"><i class="fas fa-clipboard-check text-white text-2xl"></i></div>
                     <h3 class="text-xl font-heading font-bold text-navy mb-3" data-i18n="card1_title">Auditoría & Estándares</h3>
-                    <p class="text-gray-600 text-sm leading-relaxed text-justify" data-i18n="card1_desc">Competencias probadas en ISO 9001:2015, 19011 y 45001. Gestión basada en evidencia para "Zero Fines" en inspecciones STPS.</p>
+                    <p class="text-gray-600 text-sm leading-relaxed text-justify" data-i18n="card1_desc">Competencias probadas en ISO 9001, 19011 y 45001. Gestión basada en evidencia para "Zero Fines" en inspecciones STPS.</p>
                 </div>
                 <div class="p-8 rounded-xl bg-slate border border-gray-100 hover:shadow-xl transition-shadow group">
                     <div class="w-14 h-14 bg-navy rounded-lg flex items-center justify-center mb-6 group-hover:bg-teal transition-colors"><i class="fas fa-chart-line text-white text-2xl"></i></div>
@@ -231,7 +231,7 @@
                     <p class="text-sm text-gray-600 mb-4" data-i18n="legal_c1_desc">Auditoría interna ISO 45001/9001 y mejora continua con Lean Six Sigma.</p>
                     <ul class="text-xs text-gray-500 space-y-2">
                         <li class="flex items-center gap-2"><i class="fas fa-check text-green-500"></i> ISO 45001:2018</li>
-                        <li class="flex items-center gap-2"><i class="fas fa-check text-green-500"></i> Lean Six Sigma (Green Belt)</li>
+                        <li class="flex items-center gap-2"><i class="fas fa-check text-green-500"></i> Lean Six Sigma</li>
                     </ul>
                 </div>
 
@@ -664,7 +664,7 @@
                     </div>
                     <h4 class="text-sm font-bold text-gray-500 mb-4 uppercase tracking-wide">Aeroméxico / Aeroméxico Cargo</h4>
                     <p class="text-gray-600 text-sm leading-relaxed" data-i18n="career_role1_desc">
-                        Coordinación de evaluaciones médicas para tripulación y operativos de mantenimiento. Gestión integral de riesgos laborales (ST-7, ST-9, ST-2) y enlace con IMSS. Implementación de pruebas de seguridad crítica (fatiga, alcoholimetría). Cobertura en Fresenius Kabi, DHL y Walmart.
+                        Coordinación de evaluaciones médicas para tripulación y operativos de mantenimiento. Gestión integral de riesgos laborales (ST-7, ST-9, ST-2) y enlace con IMSS. Implementación de pruebas de seguridad crítica (fatiga, alcoholimetría).<br><br><strong>• Cobertura en Fresenius Kabi, DHL CEDIS y Walmart CEDIS.</strong>
                     </p>
                 </div>
 
@@ -712,7 +712,7 @@
                             <i class="fas fa-user-shield text-indigo-500 mt-1"></i>
                             <div>
                                 <strong class="block text-navy text-sm" data-i18n="career_edu_2_title">Especialidad en Seguridad e Higiene Industrial</strong>
-                                <span class="text-xs text-gray-500" data-i18n="career_edu_2_desc">UNITEC (En curso)</span>
+                                <span class="text-xs text-gray-500" data-i18n="career_edu_2_desc">UNITEC (Término previsto: Dic 2026)</span>
                             </div>
                         </li>
                         <li class="flex items-start gap-3">
@@ -726,7 +726,7 @@
                             <i class="fas fa-certificate text-indigo-500 mt-1"></i>
                             <div>
                                 <strong class="block text-navy text-sm" data-i18n="career_edu_4_title">Certificación Lean Six Sigma</strong>
-                                <span class="text-xs text-gray-500" data-i18n="career_edu_4_desc">Yellow, Green y Black Belt (En curso)</span>
+                                <span class="text-xs text-gray-500" data-i18n="career_edu_4_desc">Yellow & Green (Certificado) | Black Belt (Fase de Proyecto)</span>
                             </div>
                         </li>
                          <li class="flex items-start gap-3">
@@ -779,7 +779,7 @@
                 "about_title": "Ingeniería de Salud Operativa y <span class=\"text-teal\">Mejora Continua.</span>", 
                 "about_desc": "Integro principios de medicina laboral con metodologías de ingeniería (Lean Six Sigma, Análisis de Causa Raíz) para transformar la salud en un KPI medible. Mi enfoque no es solo clínico, es estructural: optimizo procesos para garantizar continuidad operativa y cumplimiento ISO/STPS.", 
                 "card1_title": "Auditoría & Estándares", 
-                "card1_desc": "Competencias probadas en ISO 9001:2015, 19011 y 45001. Gestión basada en evidencia para \"Zero Fines\" en inspecciones STPS.", 
+                "card1_desc": "Competencias probadas en ISO 9001, 19011 y 45001. Gestión basada en evidencia para \"Zero Fines\" en inspecciones STPS.", 
                 "card2_title": "ROI & Siniestralidad", 
                 "card2_desc": "Control agresivo de formatos ST-7/ST-9 ante el IMSS. Reducción directa de la Prima de Riesgo mediante análisis de datos y prevención técnica.", 
                 "card3_title": "Seguridad Operativa", 
@@ -857,7 +857,7 @@
                 "career_desc": "Más de 5 años de experiencia consolidada en gestión de servicios médicos corporativos, salud ocupacional y programas de bienestar.",
                 "career_role1_title": "Médico Ocupacional",
                 "career_role1_date": "Julio 2023 - Abril 2025",
-                "career_role1_desc": "Coordinación de evaluaciones médicas para tripulación y operativos de mantenimiento. Gestión integral de riesgos laborales (ST-7, ST-9, ST-2) y enlace con IMSS. Implementación de pruebas de seguridad crítica (fatiga, alcoholimetría). Cobertura en Fresenius Kabi, DHL y Walmart.",
+                "career_role1_desc": "Coordinación de evaluaciones médicas para tripulación y operativos de mantenimiento. Gestión integral de riesgos laborales (ST-7, ST-9, ST-2) y enlace con IMSS. Implementación de pruebas de seguridad crítica (fatiga, alcoholimetría).<br><br><strong>• Cobertura en Fresenius Kabi, DHL CEDIS y Walmart CEDIS.</strong>",
                 "career_role2_title": "Especialista en Medicina Ocupacional (Proyecto)",
                 "career_role2_date": "Junio 2023 - Sep 2023",
                 "career_role2_desc": "Diseño e implementación del departamento de medicina laboral desde cero. Integración de protocolos médicos al reclutamiento, gestión de consentimientos informados y optimización de recursos médicos.",
@@ -869,11 +869,11 @@
                 "career_edu_1_title": "Licenciatura en Médico Cirujano y Partero",
                 "career_edu_1_desc": "Universidad de Guadalajara (2014-2018)",
                 "career_edu_2_title": "Especialidad en Seguridad e Higiene Industrial",
-                "career_edu_2_desc": "UNITEC (En curso)",
+                "career_edu_2_desc": "UNITEC (Término previsto: Dic 2026)",
                 "career_edu_3_title": "Especialidad en Derecho Sanitario",
                 "career_edu_3_desc": "Enfoque: Regulación COFEPRIS y Normatividad",
                 "career_edu_4_title": "Certificación Lean Six Sigma",
-                "career_edu_4_desc": "Yellow, Green y Black Belt (En curso)",
+                "career_edu_4_desc": "Yellow & Green (Certificado) | Black Belt (Fase de Proyecto)",
                 "career_edu_5_title": "Data Science Bootcamp",
                 "career_edu_5_desc": "Gestión de Dashboards y Análisis de Datos",
                 // Dashboard Translations
@@ -949,7 +949,7 @@
                 "about_title": "Operational Health Engineering & <span class=\"text-teal\">Continuous Improvement.</span>", 
                 "about_desc": "I integrate occupational medicine principles with engineering methodologies (Lean Six Sigma, Root Cause Analysis) to transform health into a measurable KPI. My focus is structural: optimizing processes to ensure operational continuity and ISO/STPS compliance.", 
                 "card1_title": "Audit & Standards", 
-                "card1_desc": "Proven competencies in ISO 9001:2015, 19011 & 45001. Evidence-based management for 'Zero Fines' in STPS inspections.", 
+                "card1_desc": "Proven competencies in ISO 9001, 19011 & 45001. Evidence-based management for 'Zero Fines' in STPS inspections.", 
                 "card2_title": "ROI & Claims Rate", 
                 "card2_desc": "Rigorous management of ST-7/ST-9 forms with IMSS. Direct reduction of Risk Premium through data analytics and technical prevention.", 
                 "card3_title": "Operational Safety", 
@@ -1027,7 +1027,7 @@
                 "career_desc": "Over 5 years of consolidated experience in corporate medical services management, occupational health, and wellness programs.",
                 "career_role1_title": "Occupational Physician",
                 "career_role1_date": "July 2023 - April 2025",
-                "career_role1_desc": "Orchestrated specialized medical evaluations for crew and maintenance operations. Spearheaded comprehensive risk management (ST-7, ST-9, ST-2) and IMSS liaison. Implemented critical safety tests (fatigue, breathalyzer). Covered operations at Fresenius Kabi, DHL, and Walmart.",
+                "career_role1_desc": "Orchestrated specialized medical evaluations for crew and maintenance operations. Spearheaded comprehensive risk management (ST-7, ST-9, ST-2) and IMSS liaison. Implemented critical safety tests (fatigue, breathalyzer).<br><br><strong>• Coverage at Fresenius Kabi, DHL & Walmart Distribution Centers.</strong>",
                 "career_role2_title": "Occupational Medicine Specialist (Project)",
                 "career_role2_date": "June 2023 - Sep 2023",
                 "career_role2_desc": "Designed and implemented the occupational medicine department from scratch. Integrated medical protocols into recruitment, streamlined informed consent management, and optimized medical resources.",
@@ -1039,11 +1039,11 @@
                 "career_edu_1_title": "Medical Surgeon Degree",
                 "career_edu_1_desc": "University of Guadalajara (2014-2018)",
                 "career_edu_2_title": "Specialization in Industrial Safety & Hygiene",
-                "career_edu_2_desc": "UNITEC (In Progress)",
+                "career_edu_2_desc": "UNITEC (Expected completion: Dec 2026)",
                 "career_edu_3_title": "Specialization in Health Law",
                 "career_edu_3_desc": "Focus: COFEPRIS Regulation & Compliance",
                 "career_edu_4_title": "Lean Six Sigma Certification",
-                "career_edu_4_desc": "Yellow, Green & Black Belt (In Progress)",
+                "career_edu_4_desc": "Yellow & Green (Certified) | Black Belt (Project Phase)",
                 "career_edu_5_title": "Data Science Bootcamp",
                 "career_edu_5_desc": "Dashboard Management & Data Analytics",
                 // Dashboard Translations
