--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
                             <i class="fas fa-user-shield text-indigo-500 mt-1"></i>
                             <div>
                                 <strong class="block text-navy text-sm" data-i18n="career_edu_2_title">Especialidad en Seguridad e Higiene Industrial</strong>
-                                <span class="text-xs text-gray-500" data-i18n="career_edu_2_desc">UNITEC (Término previsto: Dic 2026)</span>
+                                <span class="text-xs text-gray-500" data-i18n="career_edu_2_desc">UNITEC (Término previsto: Abr 2026)</span>
                             </div>
                         </li>
                         <li class="flex items-start gap-3">
