--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="es" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
@@ -1050,7 +1050,7 @@
                 "career_edu_1_title": "Medical Surgeon Degree",
                 "career_edu_1_desc": "University of Guadalajara (2014-2018)",
                 "career_edu_2_title": "Specialization in Industrial Safety & Hygiene",
-                "career_edu_2_desc": "UNITEC (Expected completion: Dec 2026)",
+                "career_edu_2_desc": "UNITEC (Expected completion: Apr 2026)",
                 "career_edu_3_title": "Specialization in Health Law",
                 "career_edu_3_desc": "Focus: COFEPRIS Regulation & Compliance",
                 "career_edu_4_title": "Lean Six Sigma Certification",
