--- a/index.html
+++ b/index.html
@@ -718,8 +718,9 @@
                         <span class="text-xs font-bold text-gray-400 bg-gray-100 px-3 py-1 rounded-full w-fit mt-2 sm:mt-0" data-i18n="career_role3_date">Sep 2020 - Actualidad</span>
                     </div>
                     <h4 class="text-sm font-bold text-gray-500 mb-4 uppercase tracking-wide" data-i18n="career_role3_sub">Consulta Privada</h4>
-                    <p class="text-gray-600 text-sm leading-relaxed" data-i18n="career_role3_desc">
-                        Atención médica de primer contacto. Generación de convenios empresariales para la revisión de salud de colaboradores de empresas aledañas.
+                    <!-- UPDATED TEXT -->
+                    <p class="text-gray-600 text-sm leading-relaxed text-justify hyphens-none" data-i18n="career_role3_desc">
+                        Atención médica de primer contacto enfocado en diagnóstico certero y seguimiento integral del paciente.
                     </p>
                 </div>
                 
@@ -907,7 +908,7 @@
                 "career_role3_title": "Médico General y Familiar",
                 "career_role3_sub": "Consulta Privada",
                 "career_role3_date": "Sep 2020 - Actualidad",
-                "career_role3_desc": "Atención médica de primer contacto. Generación de convenios empresariales para la revisión de salud de colaboradores de empresas aledañas.",
+                "career_role3_desc": "Atención médica de primer contacto enfocado en diagnóstico certero y seguimiento integral del paciente.",
                 "career_edu_title": "Formación Académica & Certificaciones",
                 "career_edu_1_title": "Licenciatura en Médico Cirujano y Partero",
                 "career_edu_1_desc": "Universidad de Guadalajara (2014-2018)",
