--- a/index.html
+++ b/index.html
@@ -782,6 +782,14 @@
                                 <span class="text-xs text-gray-500" data-i18n="career_edu_7_desc">Normativa para espacios de lactancia materna</span>
                             </div>
                         </li>
+                        <!-- NUEVO CURSO 3: RPBI -->
+                        <li class="flex items-start gap-3">
+                            <i class="fas fa-biohazard text-indigo-500 mt-1"></i>
+                            <div>
+                                <strong class="block text-navy text-sm" data-i18n="career_edu_8_title">Residuos Peligrosos Biológico Infecciosos (R.P.B.I.)</strong>
+                                <span class="text-xs text-gray-500" data-i18n="career_edu_8_desc">Manejo seguro según NOM-087-ECOL-SSA1-2002</span>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -925,6 +933,8 @@
                 "career_edu_6_desc": "Preparación de Alimentos (NOM-251-SSA1-2009)",
                 "career_edu_7_title": "Regulación Sanitaria en Lactarios",
                 "career_edu_7_desc": "Normativa para espacios de lactancia materna",
+                "career_edu_8_title": "Residuos Peligrosos Biológico Infecciosos (R.P.B.I.)",
+                "career_edu_8_desc": "Manejo seguro según NOM-087-ECOL-SSA1-2002",
                 // Dashboard Translations MODIFIED
                 "kpi_days": "Días Incapacidad",
                 "kpi_compliance": "Cumplimiento ISO",
@@ -1096,6 +1106,8 @@
                 "career_edu_6_desc": "Food Preparation Safety (NOM-251-SSA1-2009)",
                 "career_edu_7_title": "Sanitary Regulation in Nursing Rooms",
                 "career_edu_7_desc": "Compliance standards for lactation spaces",
+                "career_edu_8_title": "Hazmat Biological-Infectious Waste (R.P.B.I.)",
+                "career_edu_8_desc": "Safe management per NOM-087-ECOL-SSA1-2002",
                 // Dashboard Translations MODIFIED
                 "kpi_days": "Disability Days",
                 "kpi_compliance": "ISO Compliance",
