--- a/index.html
+++ b/index.html
@@ -800,9 +800,10 @@
     <footer id="contact" class="bg-navy text-white pt-20 pb-10 border-t border-gray-800">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
             <h2 class="text-3xl lg:text-4xl font-heading font-bold mb-6" data-i18n="footer_title">¿Hablamos de estrategia?</h2>
-            <div class="flex flex-col sm:flex-row justify-center gap-4 mb-16">
+            <div class="flex flex-col sm:flex-row justify-center gap-4 mb-16 flex-wrap">
                 <a href="mailto:dr.hanmedical@gmail.com" class="px-8 py-4 bg-white text-navy font-bold rounded hover:bg-gray-100 transition-colors flex items-center justify-center gap-3"><i class="fas fa-envelope"></i> <span data-i18n="footer_btn_email">Correo electrónico</span></a>
                 <a href="https://wa.me/525629846164" target="_blank" class="px-8 py-4 bg-whatsapp text-white font-bold rounded hover:bg-green-600 transition-colors flex items-center justify-center gap-3"><i class="fab fa-whatsapp"></i> <span data-i18n="footer_btn_wa">WhatsApp directo</span></a>
+                <a href="https://www.linkedin.com/in/drhanmedical" target="_blank" class="px-8 py-4 bg-[#0077b5] text-white font-bold rounded hover:bg-[#006097] transition-colors flex items-center justify-center gap-3"><i class="fab fa-linkedin"></i> <span data-i18n="footer_btn_linkedin">LinkedIn</span></a>
                 <a href="https://drive.google.com/file/d/1zPAhoGCNj7cHVxNoF2MLWUudHTGEP_4-/view?usp=drive_link" target="_blank" class="px-8 py-4 bg-indigo-600 text-white font-bold rounded hover:bg-indigo-500 transition-colors flex items-center justify-center gap-3"><i class="fas fa-file-pdf"></i> <span data-i18n="footer_btn_cv">Ver CV Completo</span></a>
             </div>
             <div class="border-t border-gray-800 pt-10 text-sm text-gray-400">
@@ -889,6 +890,7 @@
                 "footer_title": "¿Hablamos de estrategia?", 
                 "footer_btn_email": "Correo electrónico", 
                 "footer_btn_wa": "WhatsApp directo", 
+                "footer_btn_linkedin": "LinkedIn",
                 "footer_rights": "© 2026 Dr. Han Medical. Todos los derechos reservados.",
                 // New Legal Translations
                 "legal_badge": "COMPLIANCE & EHS",
@@ -1063,6 +1065,7 @@
                 "footer_title": "Let's talk strategy?", 
                 "footer_btn_email": "Email", 
                 "footer_btn_wa": "Direct WhatsApp", 
+                "footer_btn_linkedin": "LinkedIn",
                 "footer_rights": "© 2026 Dr. Han Medical. All rights reserved.",
                 "legal_badge": "COMPLIANCE & EHS",
                 "legal_title": "Regulatory Framework: <span class=\"text-indigo-600\">Data, ISO & STPS</span>",
